--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -6,12 +6,12 @@
 <head>
     <link rel="stylesheet" hrefs="/css/styles.css">
     <script src="/js/app.js"> </script>
-
 </head>
 
 
 <body>
     <h1>{{title}}</h1>
+    <img src="/img/me.png">
     <p>Create by {{name}}</p>
 </body>
 
