--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" hrefs="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"> </script>
 </head>
 
