--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 
-
 <html>
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"> </script>
-
 </head>
 
-
 <body>
-    <h1>{{title}}</h1>
-    <p>Create by {{name}}</p>
+    <h1>Help!!!</h1>
+    <p>{{helpText}}</p>
 </body>
-
-
 
 </html>
