--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    <h1>Help!!!</h1>
-    <p>{{helpText}}</p>
+    {{>header}}
+    404 not found!
+    {{>footer}}
 </body>
 
 </html>
