--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 
-
 <html>
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"> </script>
-
+    <script src="/js/app.js"></script>
 </head>
 
-
 <body>
-    <h1>{{title}}</h1>
-    <p>Create by {{name}}</p>
+    {{>header}}
+    {{>footer}}
 </body>
-
-
 
 </html>
