--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -3,12 +3,17 @@
 <html>
 
 <head>
+    <title>404</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    {{>header}}
-    404 not found!
+    <div class="main-content">
+        {{>header}}
+        <p>{{errorMessage}}</p>
+    </div>
+    
     {{>footer}}
 </body>
 
