--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,12 +3,26 @@
 <html>
 
 <head>
+    <title>Weather</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
+
+        <p>Use this site to get your weather!</p>
+
+        <form>
+            <input>
+            <button>Search</button>
+        </form>
+
+        <script src="/js/app.js"></script>
+
+    </div>
+
     {{>footer}}
 </body>
 
