Setup for heroku.

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -15,9 +15,12 @@
         <p>Use this site to get your weather!</p>
 
         <form>
-            <input>
+            <input placeholder="地點！">
             <button>Search</button>
         </form>
+
+        <p id="message-1"></p>
+        <p id="message-2"></p>
 
         <script src="/js/app.js"></script>
 
